--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-NEXT_PUBLIC_GISCUS_REPO=
-NEXT_PUBLIC_GISCUS_REPOSITORY_ID=
-NEXT_PUBLIC_GISCUS_CATEGORY=
-NEXT_PUBLIC_GISCUS_CATEGORY_ID=
-NEXT_PUBLIC_UTTERANCES_REPO=
+NEXT_PUBLIC_GISCUS_REPO='CodeDaiQin/blog'
+NEXT_PUBLIC_GISCUS_REPOSITORY_ID=R_kgDOHG6IrQ
+NEXT_PUBLIC_GISCUS_CATEGORY=General
+NEXT_PUBLIC_GISCUS_CATEGORY_ID=DIC_kwDOHG6Irc4COlJw
+NEXT_PUBLIC_UTTERANCES_REPO='CodeDaiQin/blog'
 NEXT_PUBLIC_DISQUS_SHORTNAME=
 
 
@@ -16,7 +16,7 @@ BUTTONDOWN_API_KEY=
 CONVERTKIT_API_URL=https://api.convertkit.com/v3/
 CONVERTKIT_API_KEY=
 // curl https://api.convertkit.com/v3/forms?api_key=<your_public_api_key> to get your form ID 
-CONVERTKIT_FORM_ID= 
+CONVERTKIT_FORM_ID=
 
 KLAVIYO_API_KEY=
 KLAVIYO_LIST_ID=
